--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
+h1,h2,h3,h4,h5,h6,div,p{
+  color:#fff;
+}
+body{
+  background: rgb(19,17,54);
+  background: linear-gradient(top, rgba(19,17,54,1) 9%, rgba(20,38,79,1) 100%);
+}
+.card_home{
+  width: 50%;
+  margin: auto;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card_home .card{
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
